--- a/pager/style.sass
+++ b/pager/style.sass
@@ -1171,6 +1171,11 @@ body
 		overflow: hidden
 		border: 1px solid #EDD1AB
 		background: linear-gradient(90deg, #231F19 35.12%, #4B4336 100%), linear-gradient(125deg, rgba(242, 228, 205, 0.44) 0%, rgba(242, 228, 205, 0.00) 100%)
+
+		a
+			color: #fff
+			font-weight: bold
+
 		&:hover
 			opacity: 0.8
 			transition: opacity .2s
