--- a/pager/index.pug
+++ b/pager/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
 		link(href="style.sass", rel="stylesheet")
 		link(href="http://herewallet.app/pager-freemint", rel="canonical")
 		meta(property="og:url", content="http://herewallet.app/pager-freemint")
-		meta(property="og:title", content="Pager Freemint")
+		meta(property="og:title", content="PAGER NFT Freemint")
 		meta(property="og:description", content="Send money to friends via phone number and get rewards")
 		meta(name="format-detection", content="telephone=no")
 		link(href="https://fonts.googleapis.com", rel="preconnect")
@@ -33,7 +33,7 @@ html(lang="en")
 	body
 		.header(style="padding-top:32px")
 			a(href="https://herewallet.app").logo
-				img(src="images/logo-here.svg", alt="Aurora is HERE now")
+				img(src="images/logo-here.svg", alt="HERE")
 			.follow-us
 				.follow-us__title Follow us:
 				.follow-us__ul
@@ -57,8 +57,8 @@ html(lang="en")
 		.screen-title
 			.screen-title__left
 				h1.title-h1 Pager Freemint
-				.title-prev Deadline: 31 November
-				a(href="https://t.me/herewalletchat", target="_blank").title-link Freemint tutorial
+				.title-prev Buyback: 10 December
+				a(href="https://www.herewallet.app/blog/freemint", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
 					img(src="./images/big-brains.png").backed-by__brain
@@ -69,7 +69,7 @@ html(lang="en")
 		.screen-stock
 			.screen-stock__wrapper
 				.screen-stock_title 10000 pagers in stock
-				.stock-p Mint basic pager, upgrade it and burn to receive USDT rewards
+				.stock-p Mint basic PAGER, upgrade it to increase the price and sell on buyback on 10 Dec.
 				.screen-stock__slider
 					.screen-stock__slider-item
 						.slider-item__slide-tables
@@ -80,14 +80,14 @@ html(lang="en")
 										.slider-item__table-list_left Current Price
 										.tooltip-container
 											span.tooltip-trigger
-											.tooltip The price of NFT can coming down as new NFTs are released
+											.tooltip The prize pool is shared by all NFTs. The price of NFT can coming down as new PAGERs are minted. Be the first to sell.
 										.slider-item__table-list_right.price ≈ 2 USDT
 									.slider-item__table-list
-										.slider-item__table-list_left Weight of points
-										.slider-item__table-list_right 1
+										.slider-item__table-list_left Value
+										.slider-item__table-list_right 1 point
 									.slider-item__table-list
 										.slider-item__table-list_left Minted
-										.slider-item__table-list_right.count 1234/10000
+										.slider-item__table-list_right.count 0/10000
 
 							.slider-item__left#item-pro
 								h3.h3-pro PRO
@@ -96,11 +96,11 @@ html(lang="en")
 										.slider-item__table-list_left Current Price
 										.tooltip-container
 											span.tooltip-trigger
-											.tooltip The price of NFT can coming down as new NFTs are released
+											.tooltip The prize pool is shared by all NFTs. The price of NFT can coming down as new PAGERs are minted. Be the first to sell.
 										.slider-item__table-list_right.price ≈ 20 USDT
 									.slider-item__table-list
-										.slider-item__table-list_left Weight of points
-										.slider-item__table-list_right 3
+										.slider-item__table-list_left Value
+										.slider-item__table-list_right 3 points
 									.slider-item__table-list
 										.slider-item__table-list_left Upgraded
 										.slider-item__table-list_right.count 0
@@ -112,11 +112,11 @@ html(lang="en")
 										.slider-item__table-list_left Current Price
 										.tooltip-container
 											span.tooltip-trigger
-											.tooltip The price of NFT can coming down as new NFTs are released
+											.tooltip The prize pool is shared by all NFTs. The price of NFT can coming down as new PAGERs are minted. Be the first to sell.
 										.slider-item__table-list_right.price ≈ 40 USDT
 									.slider-item__table-list
-										.slider-item__table-list_left Weight of points
-										.slider-item__table-list_right 6
+										.slider-item__table-list_left Value
+										.slider-item__table-list_right 6 points
 									.slider-item__table-list
 										.slider-item__table-list_left Upgraded
 										.slider-item__table-list_right.count 0
@@ -139,8 +139,8 @@ html(lang="en")
 
 		.screen-your.user
 			.screen-your__left
-				.screen-your__h4 Your
-				.screen-your__h2 PageR
+				.screen-your__h4 Mint
+				.screen-your__h2 Pager
 					span.price
 
 				.screen-your__right
@@ -162,13 +162,13 @@ html(lang="en")
 
 				.screen-your__send
 					button.screen-your__btn.connect-wallet-from-item Connect wallet
-					p To find out the details, connect your account!
+					p To mint and upgarde PAGER NFT, connect your account!
 					span.screen-your__error
 
 		.screen-your
 			.screen-your__left
-				.screen-your__h4 Your
-				.screen-your__h2 PageR
+				.screen-your__h4 Mint
+				.screen-your__h2 Pager
 					span.price
 
 				.screen-your__right
@@ -189,14 +189,14 @@ html(lang="en")
 					li 2. Follow @here_wallet
 
 				.screen-your__send
-					button.screen-your__btn Mint PAGER
-					p You haven’t claimed the pager yet. You can do it now!
+					button.screen-your__btn Mint (free)
+					p You haven’t claimed the PAGER NFT yet. You can do it now!
 					span.screen-your__error
 
 		.screen-your
 			.screen-your__left.user
 				.screen-your__h4 Your
-				.screen-your__h2 PageR
+				.screen-your__h2 Pager
 					span.price
 
 				.screen-your__right
@@ -207,22 +207,22 @@ html(lang="en")
 				ul.screen-your__ul
 					li
 						span Tips: 
-					li 1. Click “Pay&Transfer”
-					li 2. Click “Use Phone number”
-					li 3. Send money to a friend which haven't gotten the transfer by number yet
+					li 1. Click "Pay&Transfer"
+					li 2. Click "Send by link"
+					li 3. Send link to a friend by sms or Whats App 
 					li 
-						span 4. Wait while he/she claims it from new device.
+						span 4. Wait while he/she claims it (only new devices count)
 
 				.screen-your__send
 					button.screen-your__btn Upgrade to PAGER Pro
 					button.screen-your__btn_transp Sell
-						span Available on Dec, 10
+						span Buyback on Dec, 10
 					span.screen-your__error
 
 		.screen-your
 			.screen-your__left
 				.screen-your__h4 Your
-				.screen-your__h2 PageR PRO
+				.screen-your__h2 Pager PRO
 					span.price
 
 				.screen-your__right
@@ -232,8 +232,8 @@ html(lang="en")
 				ul.screen-your__ul
 					li
 						span Tips: 
-					li 1. Click “Pay&Transfer”
-					li 2. Click “Use Phone number”
+					li 1. Click "Pay&Transfer"
+					li 2. Click "Use Phone number"
 					li 3. Send money to a friend which haven't gotten the transfer by number yet
 					li 
 						span 4. Wait while he/she claims it from new device.
@@ -241,13 +241,13 @@ html(lang="en")
 				.screen-your__send
 					button.screen-your__btn Upgrade to PAGER Ultra
 					button.screen-your__btn_transp Sell
-						span Available on Dec, 10
+						span Buyback on Dec, 10
 					span.screen-your__error
 		
 		.screen-your
 			.screen-your__left
 				.screen-your__h4 Your
-				.screen-your__h2 PageR ULTRA
+				.screen-your__h2 Pager ULTRA
 					span.price 
 
 				.screen-your__right
@@ -256,12 +256,12 @@ html(lang="en")
 				ul.screen-your__ul
 					li
 						span What to do next? 
-					li 1. You can earn +50 score for every new user invited via phone number
-					li 2. You can sell this pager for 5-9 USDT on Tradeport
+					li 1. We will be announcing 3 pre-sales on Twitter for 50-100 NFT. The earlier you sell, the higher the price will be
+					li 2. Pre-sales will be available for users with a 500+ score or for those who have connected a Binance account. Make sure you are ready.
 
 				.screen-your__send
 					button.screen-your__btn_transp Sell
-						span Available on Dec, 10
+						span Buyback on Dec, 10
 		
 		.screen-howitwork
 			h2.title-black How it works
@@ -277,7 +277,7 @@ html(lang="en")
 					p yor friend will receive an sms with a link to download a wallet. money will be inside it.
 
 		.screen-earnmore
-			h2.title-white earn more!
+			h2.title-white Earn more!
 			.screen-earnmore__wrapper
 				.screen-earnmore__column
 					.screen-earnmore__img
@@ -299,7 +299,7 @@ html(lang="en")
 						.screen-earnmore__usdt 1
 							img.screen-earnmore_img-icon(src='./images/earn-more-t.png' alt='2 USDT')
 					h3 Refferal<br /> program
-					p You receive 1 USDT for each invited friend who connected binance account
+					p You receive 1-2 USDT for each invited friend who connected Binance account
 		
 		.section-faq#faq
 			.section-faq__title In case you <span>missed anything</span>
