--- a/pager/index.pug
+++ b/pager/index.pug
@@ -57,7 +57,7 @@ html(lang="en")
 		.screen-title
 			.screen-title__left
 				h1.title-h1 Pager Freemint
-				.title-prev Buyback: 10 December
+				.title-prev Buyback: Dec, 10
 				a(href="https://www.herewallet.app/blog/freemint", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
