--- a/blog/style.sass
+++ b/blog/style.sass
@@ -130,12 +130,14 @@ section
         left: 0
 
 .subscribe.subscribe-email-form
-    width: 100%
+    width: fit-content
     padding: 0
     padding-bottom: 0
     border-radius: 0
     border: 0
     background: unset
+    margin: auto
+
 .subscribe
     display: flex
     justify-content: center
@@ -388,6 +390,9 @@ section
         width: 100%
         border-radius: 16px
         padding-bottom: 32px
+        max-height: 500px
+        object-fit: contain
+
     h1,
     h2,
     h3
@@ -458,6 +463,7 @@ section
     border-radius: 16px
     border: 1px solid #C7BAB8
     background: #FDBF1E
+
     @media (max-width: 560px)
         padding: 64px 32px
     .title
@@ -509,13 +515,11 @@ section
             @media (max-width: 660px)
                 width: 100%
     .form-error
-        text-align: start
+        text-align: left
         width: 100%
         color: #d63e3e
-        margin: 0
-        padding: 6px 0 0 24px
+        margin: 8px 0 0
         font-size: 14px
-        height: 14px
 
 @keyframes anvil
     0%
