--- a/pager/index.pug
+++ b/pager/index.pug
@@ -48,17 +48,11 @@ html(lang="en")
 
 			.btn-connect-wallet Connect wallet
 
-		.support-buttons
-			a(href="https://discord.gg/8Q3gw3gsD2")
-				img(src="../assets/Socials/Discord.svg")
-			a(href="https://t.me/herewalletchat")
-				img(src="../assets/Socials/Telegram.svg")
-
 		.screen-title
 			.screen-title__left
 				h1.title-h1 Pager Freemint
 				.title-prev Buyback: Dec, 10
-				a(href="https://www.herewallet.app/blog/freemint", target="_blank").title-link Freemint tutorial
+				a(href="https://herewallet.medium.com/pager-freemint-92ad3a2c7e3c", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
 					img(src="./images/big-brains.png").backed-by__brain
