--- a/pager/index.pug
+++ b/pager/index.pug
@@ -149,10 +149,15 @@ html(lang="en")
 					li 
 						div 1. Connect Telegram or Twitter account
 						div(style="display: flex; gap: 8px; margin: 8px 0 16px;")
-							a(href="" target="_blank" rel="noopener noreferrer").connect-social.twitter.connected Twitter
+							a(href="" target="_blank" rel="noopener noreferrer").connect-social.twitter Twitter
 							a(href="" target="_blank" rel="noopener noreferrer").connect-social.telegram Telegram
 
-					li 2. Follow @here_wallet
+					li(style="display: flex; gap: 4px; align-items: center")
+						span 2. Follow @here_wallet 
+						a(target="_blank" rel="noopener noreferrer" style="margin-left: 8px" href="https://twitter.com/here_wallet")
+							img(src="./images/twitter3.svg")
+						a(target="_blank" rel="noopener noreferrer" href="https://t.me/herewalletchat")
+							img(src="./images/telegram3.svg")
 
 				.screen-your__send
 					button.screen-your__btn.connect-wallet-from-item(style="width: 100%") Connect wallet
@@ -176,7 +181,7 @@ html(lang="en")
 					li 
 						div 1. Connect Telegram or Twitter account
 						div(style="display: flex; gap: 8px; margin: 8px 0 16px;")
-							a(href="" target="_blank" rel="noopener noreferrer").connect-social.twitter.connected Twitter
+							a(href="" target="_blank" rel="noopener noreferrer").connect-social.twitter Twitter
 							a(href="" target="_blank" rel="noopener noreferrer").connect-social.telegram Telegram
 
 					li(style="display: flex; gap: 4px; align-items: center")
