--- a/pager/index.pug
+++ b/pager/index.pug
@@ -336,4 +336,4 @@ html(lang="en")
 				p Bounty bank: 
 					span.bank ______
 
-		script(type="module", src="index.js")
+		script(type="module", src="index.ts")
