--- a/pager/style.sass
+++ b/pager/style.sass
@@ -1299,3 +1299,23 @@ body
 
 	span
 		color: #0F0E0C
+
+.change-mission-variant
+	display: flex
+	align-items: center
+	gap: 6px
+
+	color: #EDD1AB
+	font-family: Inter
+	font-size: 16px
+	font-style: normal
+	font-weight: 500
+	line-height: normal
+	letter-spacing: -0.32px
+	cursor: pointer
+	margin-top: 32px
+
+	transition: 0.2s opacity
+
+	&:hover
+		opacity: 0.8
