--- a/pager/index.pug
+++ b/pager/index.pug
@@ -136,6 +136,11 @@ html(lang="en")
 				.screen-your__h4 Mint
 				.screen-your__h2 Pager
 					span.price
+					.tooltip-container
+						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
+						.tooltip 1 point × Point prize. Bounty bank is $4000: 
+							br
+							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
 
 				.screen-your__right
 					img.screen-your__img(src='./images/mint-1.jpg' alt='Basic')
@@ -168,6 +173,11 @@ html(lang="en")
 				.screen-your__h4 Mint
 				.screen-your__h2 Pager
 					span.price
+					.tooltip-container
+						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
+						.tooltip 1 point × Point prize. Bounty bank is $4000: 
+							br
+							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
 
 				.screen-your__right
 					img.screen-your__img(src='./images/mint-1.jpg' alt='Basic')
@@ -200,6 +210,11 @@ html(lang="en")
 				.screen-your__h4 Your
 				.screen-your__h2 Pager
 					span.price
+					.tooltip-container
+						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
+						.tooltip 1 point × Point prize. Bounty bank is $4000: 
+							br
+							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
 
 				.screen-your__right
 					img.screen-your__img(src='./images/mint-1.jpg' alt='Basic')
@@ -217,8 +232,13 @@ html(lang="en")
 
 				.screen-your__send
 					button.screen-your__btn Upgrade to PAGER Pro
-					button.screen-your__btn_transp Sell
-						span Buyback on Dec, 30
+					div.sell-nft-wrap
+						button.screen-your__btn_transp Sell
+							span Buyback on Dec, 30
+						
+						a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
+							| Trade on Tradeport now
+							
 					span.screen-your__error
 
 		.screen-your
@@ -226,6 +246,11 @@ html(lang="en")
 				.screen-your__h4 Your
 				.screen-your__h2 Pager PRO
 					span.price
+					.tooltip-container
+						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
+						.tooltip 1 point × Point prize. Bounty bank is $4000: 
+							br
+							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
 
 				.screen-your__right
 					img.screen-your__img(src='./images/mint-2.jpg' alt='PageR PRO')
@@ -257,8 +282,13 @@ html(lang="en")
 
 				.screen-your__send
 					button.screen-your__btn Upgrade to PAGER Ultra
-					button.screen-your__btn_transp Sell
-						span Buyback on Dec, 30
+					div.sell-nft-wrap
+						button.screen-your__btn_transp Sell
+							span Buyback on Dec, 30
+						
+						a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
+							| Trade on Tradeport now
+
 					span.screen-your__error
 
 				.change-mission-variant
@@ -270,6 +300,11 @@ html(lang="en")
 				.screen-your__h4 Your
 				.screen-your__h2 Pager ULTRA
 					span.price 
+					.tooltip-container
+						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
+						.tooltip 1 point × Point prize. Bounty bank is $4000: 
+							br
+							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
 
 				.screen-your__right
 					img.screen-your__img(src='./images/mint-3.jpg' alt='PageR ULTRA')
@@ -281,8 +316,12 @@ html(lang="en")
 					li 2. Pre-sales will be available for users with a 500+ score or for those who have connected a Binance account. Make sure you are ready.
 
 				.screen-your__send
-					button.screen-your__btn_transp Sell
-						span Buyback on Dec, 30
+					div.sell-nft-wrap
+						button.screen-your__btn_transp Sell
+							span Buyback on Dec, 30
+						
+						a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
+							| Trade on Tradeport now
 		
 		.screen-howitwork
 			h2.title-black How it works
