--- a/pager/style.sass
+++ b/pager/style.sass
@@ -636,6 +636,12 @@ body
 	font-weight: 600
 	letter-spacing: -0.32px
 	color: #0D0C0A
+	text-transform: none
+	font-family: Inter
+	font-weight: 600
+	line-height: 1.33
+	z-index: 1000
+
 	&:after
 		position: absolute
 		top: -24px
@@ -762,6 +768,7 @@ body
 		font-weight: 700
 		letter-spacing: 0.96px
 		text-transform: uppercase
+
 		@media (max-width: 1140px)
 			font-size: 44px
 		span
@@ -814,8 +821,9 @@ body
 	&__send
 		display: flex
 		flex-wrap: wrap
-		align-items: center
+		align-items: flex-start
 		gap: 20
+
 		@media (max-width: 750px)
 			justify-content: center
 		p
@@ -1319,3 +1327,19 @@ body
 
 	&:hover
 		opacity: 0.8
+
+.sell-nft-wrap
+	display: flex
+	flex-direction: column
+	align-items: center
+	gap: 12px
+
+	a
+		color: #EDD1AB
+		font-family: Inter
+		font-size: 16px
+		font-style: normal
+		font-weight: 500
+		line-height: normal
+		letter-spacing: -0.32px
+		cursor: pointer
