--- a/pager/index.pug
+++ b/pager/index.pug
@@ -55,8 +55,10 @@ html(lang="en")
 				a(href="https://herewallet.medium.com/pager-freemint-92ad3a2c7e3c", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
-					img(src="./images/big-brains.png").backed-by__brain
-					img(src="./images/near-foundation.svg").backed-by__near
+					img(src="./images/logo-here.svg")
+					img(src="./images/big-brains.png")
+					img(src="./images/near-foundation.svg")
+
 			.screen-title__right
 				img.screen-title__img(src='./images/pager-comics.png' alt='Pager Freemint')
 
