--- a/pager/style.sass
+++ b/pager/style.sass
@@ -325,10 +325,11 @@ body
 		letter-spacing: -0.4px
 		@media (max-width: 1000px)
 			width: 100%
-	&__brain
-		height: 44px
-	&__near
-		height: 44px
+
+	img
+		height: 34px
+		object-fit: cover
+
 .screen-stock
 	width: 100%
 	background-image: url(./images/bg-pagerinstock.png)
