--- a/near-landing/index.pug
+++ b/near-landing/index.pug
@@ -4,13 +4,18 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title HERE Wallet - secure, fun and powerful client for crypto exchanges
-        meta(name="description", content="Self-custodial mobile wallet on top of centralized exchanges. You can connect Binance account to make quick transfers, use any dApps and stake onchain. Support NEAR Protocol.")
-        
-        meta(name="og:title", content="HERE Wallet")
+        title HERE Wallet - self-custodial wallet for NEAR Protocol
+
+        <meta name="description" content="Discover HERE, a self-custodial crypto wallet for storing, transferring, and staking NEAR and Aurora. Features built-in DEX aggregator on Orderly and Ref Finance, support for NFTs, and liquid NEAR staking." />
+        <meta name="keywords" content="NEAR Protocol, crypto wallet, self-custodial wallet, NEAR, Aurora, Stake NEAR, Buy NEAR, NEAR NFTs, DEX aggregator, Orderly, Ref Finance, cryptocurrency, NEAR blockchain, crypto investments" />
+
+        meta(name="og:title", content="HERE Wallet for NEAR and Aurora")
         meta(name="og:description", content="Self-custodial wallet on top of centralized exchanges. You can connect Binance account to make quick transfers, use any dApps and stake onchain.")
-        meta(name="og:url", content="https://herewallet.app")
+        meta(name="og:url", content="https://near.herewallet.app")
         meta(name="og:image", content="https://storage.herewallet.app/download.jpg")
+
+        <meta property="og:locale" content="es_ES" />
+        <meta property="og:type" content="website" />   
 
         meta(name="twitter:card", content="summary_large_image")
         meta(name="twitter:image", content="https://storage.herewallet.app/download.jpg")
