--- a/pager/index.pug
+++ b/pager/index.pug
@@ -55,8 +55,9 @@ html(lang="en")
 				a(href="https://herewallet.medium.com/pager-freemint-92ad3a2c7e3c", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
-					img(src="./images/big-brains.png").backed-by__brain
 					img(src="./images/near-foundation.svg").backed-by__near
+					img(src="./images/here-wallet.png").backed-by__near
+					img(src="./images/big-brains.png").backed-by__brain
 			.screen-title__right
 				img.screen-title__img(src='./images/pager-comics.png' alt='Pager Freemint')
 
@@ -349,10 +350,10 @@ html(lang="en")
 				.screen-earnmore__column
 					.screen-earnmore__img
 						img.screen-earnmore_main-img(src='./images/earn-more-2.png' alt='cashback for transfer')
-						.screen-earnmore__usdt 0.2
+						.screen-earnmore__usdt X
 							img.screen-earnmore_img-icon(src='./images/earn-more-t.png' alt='1.5 USDT')
 					h3 cashback<br /> for transfer
-					p You receive 0.2 USDT cashback for each transfer by phone number
+					p You receive 0.2 USDT cashback for first transfer by phone number
 				.screen-earnmore__column
 					.screen-earnmore__img
 						img.screen-earnmore_main-img(src='./images/earn-more-3.png' alt='Refferal program')
@@ -368,24 +369,23 @@ html(lang="en")
 				.section-faq__answer The cost for transferring via a phone number is the same as the SMS processing fee. It varies for different countries, and HERE doesn't charge its own fee for this.
 			.section-faq__item
 				.section-faq__ask What is the fee for transferring via a link?
-				.section-faq__answer The fee for transferring via a link is approximately 0.045 NEAR. Link transfers are facilitated through keypom.xyz.
+				.section-faq__answer The fee for transferring via a link is approximately 0.045 NEAR. Link transfers are facilitated through keypom.xyz. After the linkdrop, reserved NEARs can be unfrozen at keypom.xyz
 			.section-faq__item
 				.section-faq__ask How is the price of NFTs determined?
-				.section-faq__answer The more users mint  NFT's, the lower its price. Additionally, for different user categories, the sale will occur at different times. This might depend on factors like total score and linking Binance to HERE wallet.
+				.section-faq__answer The more users mint  NFT's, the lower its price. To maximize your benefits you can sell the NFT at one of two pre sales or get more upgrades.
 			.section-faq__item
 				.section-faq__ask How to sell NFTs
-				.section-faq__answer In your wallet's NFT section, a special button will appear. By clicking it, you'll burn the NFT and automatically receive USDT in your account.
+				.section-faq__answer After December 30 or during pre sales, there will be a button on the website to burn the NFT. Until then, you can sell NFTs on Tradeport to other traders
 			.section-faq__item
 				.section-faq__ask What to do if the NFT doesn’t update after a successful transfer
 				.section-faq__answer If your transfer isn't credited, contact our technical support on 
 					a(href="https://t.me/heresupport") Telegram 
 					| or submit a ticket in our 
-					a(href="https://discord.gg/vNWr495ZPr") Discord channel
+					a(href="https://discord.gg/vNWr495ZPr") Discord channel. This can happen due to high load and we will try to help you promptly.
 			.section-faq__item
 				.section-faq__ask How to withdraw USDT to a bank card
 				.section-faq__answer 
-					a(href="https://www.herewallet.app/blog/how-to-withdraw-to-card") Read this article on our blog 
-
+					a(href="https://www.herewallet.app/blog/how-to-withdraw-to-card") You can withdraw NEAR to Binance or other exchanges. Click to read more. 
 		.price-widget 
 			div
 				p Point price: 
