--- a/pager/index.pug
+++ b/pager/index.pug
@@ -52,7 +52,7 @@ html(lang="en")
 			.screen-title__left
 				h1.title-h1 Pager Freemint
 				.title-prev Buyback: Dec, 30
-				a(href="https://herewallet.medium.com/pager-freemint-92ad3a2c7e3c", target="_blank").title-link Freemint tutorial
+				a(href="https://www.herewallet.app/blog/pager", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
 					img(src="./images/logo-here.svg")
@@ -351,7 +351,7 @@ html(lang="en")
 				.screen-earnmore__column
 					.screen-earnmore__img
 						img.screen-earnmore_main-img(src='./images/earn-more-2.png' alt='cashback for transfer')
-						.screen-earnmore__usdt X
+						.screen-earnmore__usdt 0.2
 							img.screen-earnmore_img-icon(src='./images/earn-more-t.png' alt='1.5 USDT')
 					h3 cashback<br /> for transfer
 					p You receive 0.2 USDT cashback for first transfer by phone number
