--- a/near-landing/header/index.sass
+++ b/near-landing/header/index.sass
@@ -137,11 +137,22 @@
             color: #5D666F
 
         @media (max-width: 900px)
+            display: none
             width: auto
             background-color: transparent
-            font-size: 14px
-            &:hover
-                background-color: transparent
+            width: 100%
+            height: auto
+            padding: 12px 0
+            border-radius: 16px
+            border: 1px solid #2C3034
+            background-color: #FCE823
+            box-shadow: 4px 4px 0px 0px #FFF
+            color: #2C3034
+            text-align: center
+            font-feature-settings: 'calt' off, 'liga' off
+            font-size: 16px
+            font-weight: 600
+            line-height: 1.25
 
     .social-link
         display: flex
