--- a/near-landing/section-main/index.pug
+++ b/near-landing/section-main/index.pug
@@ -8,8 +8,8 @@ main.main
         h3 !{nearmain.subTitle}
         p !{nearmain.textTitle}
         
-        .main-header-waitlist.waitlist-button
-          a !{waiting.titleMobile}
+        .main-header-waitlist
+          a(href=common.appStore) Download APP
       .main-header__right
         .main-header__appclip
           p !{main.qrcodeLocale}
