--- a/pager/index.pug
+++ b/pager/index.pug
@@ -65,7 +65,7 @@ html(lang="en")
 		.screen-stock
 			.screen-stock__wrapper
 				.screen-stock_title 10000 pagers in stock
-				.stock-p Mint basic PAGER, upgrade it to increase the price and sell on buyback on 10 Dec.
+				.stock-p Mint BASIC PAGER, upgrade it to increase the price and sell on buyback on 30 Dec.
 				.screen-stock__slider
 					.screen-stock__slider-item
 						.slider-item__slide-tables
@@ -336,7 +336,7 @@ html(lang="en")
 					p then the USDT will go to a smart contract - a temporary secure storage.
 				.screen-howitwork__column
 					img.slider-item_img(src='./images/how-it-work-3.png' alt='download a wallet')
-					p yor friend will receive an sms with a link to download a wallet. money will be inside it.
+					p your friend will receive an sms with a link to download a wallet. money will be inside it.
 
 		.screen-earnmore
 			h2.title-white Earn more!
@@ -344,17 +344,17 @@ html(lang="en")
 				.screen-earnmore__column
 					.screen-earnmore__img
 						img.screen-earnmore_main-img(src='./images/earn-more-1.png' alt='Weekly Score')
-						.screen-earnmore__usdt 40
+						.screen-earnmore__usdt 25
 							img.screen-earnmore_img-icon(src='./images/earn-more-t.png' alt='40 USDT')
 					h3 Weekly<br /> Score
-					p Every week top 100 users by score grow get 0.5-40 USDT
+					p Every week top 100 users by score grow get 0.5-25 USDT
 				.screen-earnmore__column
 					.screen-earnmore__img
 						img.screen-earnmore_main-img(src='./images/earn-more-2.png' alt='cashback for transfer')
-						.screen-earnmore__usdt 0.2
+						.screen-earnmore__usdt X
 							img.screen-earnmore_img-icon(src='./images/earn-more-t.png' alt='1.5 USDT')
-					h3 cashback<br /> for transfer
-					p You receive 0.2 USDT cashback for first transfer by phone number
+					h3 Gas-free<br /> transactions
+					p You will get 15 gas-free transactions every month if you earn 1500+ score.
 				.screen-earnmore__column
 					.screen-earnmore__img
 						img.screen-earnmore_main-img(src='./images/earn-more-3.png' alt='Refferal program')
