--- a/pager/index.pug
+++ b/pager/index.pug
@@ -238,8 +238,8 @@ html(lang="en")
 						button.screen-your__btn_transp Sell
 							span Buyback on Dec, 30
 						
-						a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
-							| Trade on Tradeport now
+						//- a(href="https://www.tradeport.xyz/near/collection/pager.herewallet.near?tab=items&bottomTab=trades")
+						//- 	| Trade on Tradeport now
 							
 					span.screen-your__error
 
