--- a/pager/index.pug
+++ b/pager/index.pug
@@ -227,8 +227,8 @@ html(lang="en")
 					li
 						span Tips: 
 					li 1. Click "Pay&Transfer"
-					li 2. Click "Send by link"
-					li 3. Send link to a friend by sms or Whats App 
+					li 2. Click "Drop token with a link"
+					li 3. Send a link to your friend
 					li 
 						span 4. Wait while he/she claims it (only new devices count)
 
