--- a/pager/index.pug
+++ b/pager/index.pug
@@ -214,9 +214,7 @@ html(lang="en")
 					span.price
 					.tooltip-container
 						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
-						.tooltip 1 point × Point prize. Bounty bank is $4000: 
-							br
-							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
+						.tooltip Current price for the NFT buyback (1 × Point price)
 
 				.screen-your__right
 					img.screen-your__img(src='./images/mint-1.jpg' alt='Basic')
@@ -250,9 +248,7 @@ html(lang="en")
 					span.price
 					.tooltip-container
 						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
-						.tooltip 5 point × Point prize. Bounty bank is $4000: 
-							br
-							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
+						.tooltip Current price for the NFT buyback (5 × Point price)
 
 				.screen-your__right
 					img.screen-your__img(src='./images/mint-2.jpg' alt='PageR PRO')
@@ -304,9 +300,7 @@ html(lang="en")
 					span.price 
 					.tooltip-container
 						span.tooltip-trigger(style="margin-bottom: -7px; margin-left: 4px")
-						.tooltip 10 point × Point prize. Bounty bank is $4000: 
-							br
-							| It is a USDT balance for the NFT buyback. Point price = total balance / number of points issued
+						.tooltip Current price for the NFT buyback (10 × Point price)
 
 				.screen-your__right
 					img.screen-your__img(src='./images/mint-3.jpg' alt='PageR ULTRA')
