--- a/pager/index.pug
+++ b/pager/index.pug
@@ -341,7 +341,7 @@ html(lang="en")
 						.screen-earnmore__usdt 25
 							img.screen-earnmore_img-icon(src='./images/earn-more-t.png' alt='40 USDT')
 					h3 Weekly<br /> Score
-					p Every week top 100 users by score grow get 0.5-25 USDT
+					p Every week top users by score grow get 0.5-25 USDT
 				.screen-earnmore__column
 					.screen-earnmore__img
 						img.screen-earnmore_main-img(src='./images/earn-more-2.png' alt='cashback for transfer')
