--- a/pager/index.pug
+++ b/pager/index.pug
@@ -52,7 +52,7 @@ html(lang="en")
 			.screen-title__left
 				h1.title-h1 Pager Freemint
 				.title-prev Buyback: Dec, 30
-				a(href="https://www.herewallet.app/blog/pager", target="_blank").title-link Freemint tutorial
+				//- a(href="https://www.herewallet.app/blog/pager", target="_blank").title-link Freemint tutorial
 				.backed-by
 					.backed-by__title Backed by
 					img(src="./images/logo-here.svg")
